# pingpong

./: .gitignore  CMakeLists.txt  LICENSE  README.md
PingPong/: Actor.h  CMakeLists.txt  IDrawable.h  IRenderer.h  Length.h  LogManager.h  Paddle.h  Rect2D.h  SFMLRectangle.h  SFMLRenderer.h  Vector2D.h  main.cpp
PingPong/test/: CMakeLists.txt
PingPong/test/googletest/: CMakeLists.txt
PingPong/test/testPingPong/: CMakeLists.txt  main.cpp  testActor.cpp  testActor.h  testRect2D.cpp  testRect2D.h  testVector2d.cpp  testVector2d.h
